Fixed overflow of long item names

--- a/app/styles/app-internal.scss
+++ b/app/styles/app-internal.scss
@@ -233,6 +233,9 @@ body {
 	h2{
 		// padding-top: 10px;
 		margin-top: 5px;
+		overflow: hidden;
+  		text-overflow: ellipsis;
+  		white-space: nowrap;
 	}
 
 	//Card stuff
